Bug 30235 - SDVO-TV (on ADD2 card) unable to be detected
Summary: SDVO-TV (on ADD2 card) unable to be detected
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-17 01:46 UTC by Yi Sun
Modified: 2017-10-06 14:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg info (37.98 KB, text/plain)
2010-09-17 01:46 UTC, Yi Sun
no flags Details

Description Yi Sun 2010-09-17 01:46:06 UTC
Environment:
------------
platform:  HuronRiver 
kernel: 2.6.36-rc3

Bug detailed description:
--------------------------
By a SDVO-TV, the bios and grub is displayed normally. While the kernel boot up, the screen turns to black. But we are able to login the machine using ssh. After running xinit we don't detect TV, by using tool xrandr.
However, the 945gc machine works well with the same kernel.
Comment 1 Yi Sun 2010-09-17 01:46:45 UTC
Created attachment 38754 [details]
dmesg info
Comment 2 Gordon Jin 2010-09-17 01:57:21 UTC
The platform is G45 not Huron River. This is using S-video on ADD2 card.

945GC is with SDVO-TV integrated on board.
Comment 3 Chris Wilson 2010-09-17 06:00:36 UTC
2.6.36-rc3 is known to be broken with SDVO and TV detection (timing and platform specific failures), can you confirm the bug on either -rc4 or -fixes?
Comment 4 Yi Sun 2010-09-18 19:32:32 UTC
we tried 2.6.36-rc4 and the latest version on branch fixes,but nothing different from before.
Comment 5 Chris Wilson 2010-09-19 03:25:26 UTC
Can you please add drm.debug=0xe to your boot command line and attach a new dmesg?
Comment 6 Chris Wilson 2011-01-25 11:27:09 UTC
This should be fixed with:

commit d121a5d2a098ba6dd033dd195f5ccbf7558c37b6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 25 15:00:01 2011 +0000

    drm/i915/sdvo: If at first we don't succeed in reading the response, wait
    
    We were not pausing after detecting the response was pending and so did
    not allow the hardware sufficient time to complete before aborting. This
    lead to transient failures whilst probing SDVO devices.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=30235
    Reported-by: Knut Petersen <Knut_Petersen@t-online.de>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 7 Yi Sun 2011-11-03 23:05:09 UTC
Verified it, if any bug, we'll file another.
Comment 8 Elizabeth 2017-10-06 14:53:48 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.